fixed detail box flex-alignment

--- a/pages/css/info.css
+++ b/pages/css/info.css
@@ -8,3 +8,8 @@
     font-weight: 600 !important;
     letter-spacing: 0.4px;
 }
+
+.detail{
+    display: flex;
+    justify-content: center;
+}
